# ozone-health-risks-china

./: NN.ipynb  NetGBM.ipynb  README.md  SVR.py  Xgboost.ipynb  evaluation_metrics.py  lgb.py  nn.py  nn_lgb.py  pyproject.toml  xgb.py
pm25-inhalation/: lgb.py  main.py  xgb.py
pm25-inhalation/visualization/: cn-country-border.json  pm2_5_NCP_overview_plots_daily.py  pm2_5_NCP_overview_plots_monthly.py  pm2_5_china_individual_plots_daily.py  pm2_5_china_individual_plots_monthly.py  pm2_5_china_overview_plots_daily.py  pm2_5_china_overview_plots_monthly.py  pm2_5_inhalation_NCP_overview_plots_daily.py  pm2_5_inhalation_NCP_overview_plots_monthly.py  pm2_5_inhalation_china_indivdual_plots_daily.py  pm2_5_inhalation_china_individual_plots_monthly.py  pm2_5_inhalation_china_overview_plots_daily.py  pm2_5_inhalation_china_overview_plots_monthly.py  static_feature.py
visualization/: AOD.py  actual_map.py  area_AQ_prediction_results_with_map_books.py  area_AQ_prediction_results_with_map_books_nation.py  area_R2.py  area_prediction_results_with_map.py  area_prediction_results_with_map_books.py  dynamic_feature.ipynb  dynamic_feature.py  dynamic_feature2.py  dynamic_feature_books.py  fold_evaluation.py  importance.py  importance_GBM.csv  merged_data.py  national_R2.py  national_station.py  o3_inhalation_china_indivdual_plots_daily.py  prediction_result_map.py  prediction_result_scatter.py  split_area.py  split_grid_by_province.py  static_feature.py  temp_vs_o3.py
